--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "landing-page",
   "version": "1.0.0",
   "description": "This project is a simple NodeJS HW landing page.",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "",
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "keywords": [],
   "author": "fnaw",
